--- a/problem-2/Assets/CSS/site.css
+++ b/problem-2/Assets/CSS/site.css
@@ -1,1 +1,47 @@
-test
+#wrapper
+{
+	width: 100%;
+	margin: 0 auto;
+}
+
+#note-form
+{
+	width: 100%;
+	height: 50%;
+}
+
+#form-title
+{
+	font-size: 50px;
+	font-family: Arial, Helvetica, sans-serif;
+}
+
+label
+{
+	font-size: 15px
+  	width: 100%;
+ 	margin-bottom: 10px;
+	display: block;
+}
+
+input 
+{
+	font-size: 15px;
+	width: 300px;  
+	margin-bottom: 15px;
+	padding: 8px 6px;
+	display: block;
+}
+
+textarea 
+{
+  font-size: 15px;
+  display: block;
+  margin-bottom: 15px;
+  padding: 8px 6px;
+}
+
+textarea.is-empty 
+{
+  border: 1px solid tomato;
+}
