--- a/problem-2/Assets/CSS/site.css
+++ b/problem-2/Assets/CSS/site.css
@@ -1,16 +1,25 @@
+#wrapper
+{
+	width: 100%;
+	background-color: #aa96da;
+	min-height: 1140px;
+}
+
 .app
 {
 	margin: auto;
 	width: 80%;
 	height: auto;
-	border: 5px solid red;
+	min-height: 1140px;
+	border: 5px solid c;
 	padding: 15px;
+	background-color: #C5FAD5;
 }
 
 #addNew
 {
 	display: flex;
-	background-color: aqua;
+	background-color: #FFFFD2;
 }
 
 #addNew button
@@ -28,14 +37,32 @@
 
 #notes div
 {
-	background-color: bisque;
-	border: 3px solid aqua;
 	padding: 5px;
 	display: grid;
 	gap: 5px;
 	border-radius: 10px;
 	width: 45%;
 	margin: auto;
+}
+
+#notes div.red
+{
+	background-color: palevioletred;
+	border: 3px solid red;
+	
+}
+
+#notes div.green
+{
+	background-color: palegreen;
+	border: 3px solid green;
+	
+}
+
+#notes div.blue
+{
+	background-color: lightskyblue;
+	border: 3px solid blue;
 }
 
 .options
